tdf#119276 Fix loading of images with internal LO URLs

Change-Id: I30556aba4490bef7f4a6e6b3899cc05f4b6a06d4